feat: implementado mapeamento de autorizações via metodos na controller